--- a/notebook/experiments.ipynb
+++ b/notebook/experiments.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "05e3bc43",
    "metadata": {},
    "outputs": [],
@@ -71,17 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "9ffaaf4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"<think>\\nOkay, so the user is asking for the capital of France. Let me think. I remember from school that France is a country in Europe, and its capital is Paris. But wait, am I sure? Maybe I should verify. I know Paris is a major city, famous for the Eiffel Tower and the Louvre. Yeah, that's right. Other cities like Lyon or Marseille are big too, but the capital is definitely Paris. I think I've heard it referred to as the capital in many contexts. Let me check if there's any chance it's another city. No, I don't recall any other city being mentioned as the capital of France. So, yeah, the answer should be Paris.\\n</think>\\n\\nThe capital of France is **Paris**. It is one of the most iconic cities in the world, known for landmarks such as the Eiffel Tower, the Louvre Museum, and the Seine River. Paris has been the political, cultural, and economic center of France for centuries. \\n\\n**Answer:** Paris.\""
+       "'<think>\\nOkay, so the user is asking, \"What is the capital of France?\" Let me think. I know that France is a country in Europe. I remember from school that major cities include Paris, Lyon, Marseille, and maybe Bordeaux. But the capital... Hmm. I think Paris is the capital. Wait, is that right? Let me double-check. I\\'ve heard Paris is known for the Eiffel Tower and the Louvre, which are big landmarks. Also, when I think of French culture, Paris comes to mind as the main city. But maybe I should consider other possibilities. Is there any chance the capital is a different city? I recall that sometimes the capital can be a smaller city, like how some countries have capitals that aren\\'t the biggest city. For example, in the Netherlands, Amsterdam is the capital, but Rotterdam is bigger. But in France, Paris is definitely the largest city. I think the government is based in Paris. The French president\\'s office, the Élysée Palace, is there. Also, the French parliament meets in Paris. So that makes sense. I don\\'t think there\\'s any other city that\\'s the capital. Maybe I should verify by thinking about famous French events. The 2024 Olympics are going to be held in Paris, which is a big event. If they\\'re hosting the Olympics, they probably have the infrastructure as the capital. Also, when you look at the French government\\'s official website, I imagine it would be based in Paris. I don\\'t remember any other city being mentioned as the capital. Let me think if there\\'s any historical context. France has had different capitals, like maybe before Paris, but currently, I believe it\\'s Paris. For example, the capital of France used to be somewhere else during different historical periods, but in modern times, Paris has been the capital. So, yes, the answer should be Paris. I\\'m pretty confident about this. I can\\'t think of any reason why it would be different. Maybe to be thorough, I should check if there\\'s any alternative name in French, like \"Paris\" in French is still \"Paris,\" so that\\'s not an issue. Also, no other cities in France have a higher status as the capital. So the answer is Paris.\\n</think>\\n\\nThe capital of France is **Paris**. It is the largest city in the country and serves as the political, economic, and cultural center of France. Paris is home to iconic landmarks such as the Eiffel Tower, the Louvre Museum, and the Notre-Dame Cathedral, and it hosts major institutions like the French government and the headquarters of numerous international organizations.'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "df5c2e5f",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e6adec1f",
    "metadata": {},
    "outputs": [],
@@ -932,7 +932,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -946,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
