Logging files added

--- a/notebook/logging_experiment.ipynb
+++ b/notebook/logging_experiment.ipynb
@@ -1,21 +1,81 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d4600b0a",
+   "cell_type": "markdown",
+   "id": "9714e9d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "all ok\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"all ok\")"
+    "# Python Logging\n",
+    "\n",
+    "Logging is a crucial tool in Python for tracking events and debugging applications. Here's a comprehensive overview:\n",
+    "\n",
+    "## 1. What is Logging?\n",
+    "- A built-in way to track events that happen when software runs\n",
+    "- Provides a record of program execution, errors, and other important information\n",
+    "- More flexible and powerful than using print statements\n",
+    "\n",
+    "## 2. Why Use Logging?\n",
+    "- **Debugging**: Help identify problems in applications\n",
+    "- **Monitoring**: Track application behavior in production\n",
+    "- **Auditing**: Keep records of important events\n",
+    "- **Troubleshooting**: Diagnose issues in deployed applications\n",
+    "\n",
+    "## 3. Logging Levels (in increasing order of severity)\n",
+    "1. **DEBUG**: Detailed information for debugging\n",
+    "2. **INFO**: Confirmation that things are working as expected\n",
+    "3. **WARNING**: Something unexpected happened, but the program is still working\n",
+    "4. **ERROR**: A more serious problem\n",
+    "5. **CRITICAL**: Program may not be able to continue running\n",
+    "\n",
+    "## 4. Basic Implementation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ccc3b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "# Basic configuration\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
+    "    filename='app.log'\n",
+    ")\n",
+    "\n",
+    "# Creating a logger\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "# Using different log levels\n",
+    "logger.debug(\"Debug message\")\n",
+    "logger.info(\"Info message\")\n",
+    "logger.warning(\"Warning message\")\n",
+    "logger.error(\"Error message\")\n",
+    "logger.critical(\"Critical message\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ff3f0cc",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## 5. Advanced Features\n",
+    "- **File Handlers**: Write logs to multiple files\n",
+    "- **Formatters**: Customize log message format\n",
+    "- **Filters**: Control which log records to output\n",
+    "- **Structured Logging**: Using tools like `structlog` for JSON formatted logs\n",
+    "\n",
+    "## 6. Best Practices\n",
+    "- Use appropriate log levels\n",
+    "- Include contextual information\n",
+    "- Configure logging at application startup\n",
+    "- Use structured logging in production\n",
+    "- Implement log rotation to manage log files"
    ]
   },
   {
